--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "ecs-sortsystem",
   "version": "0.0.1",
   "description": "simple ecs system for sorting components",
-  "main": "SortSystem.js",
+  "main": "./dist/index.js",
+  "types": "./dist/src/SortSystem.d.ts",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -35,7 +37,9 @@
     "karma-typescript": "^3.0.5",
     "mkdirp": "^0.5.1",
     "mocha": "^3.5.0",
-    "typescript": "^2.6.2"
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "componententitysystem": "^0.4.3"
