--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "outDir": "js",
-      "sourceMap": true,
-      "watch":true,
-      "allowJs": true,
-      "lib": [
-        "es5",
-        "es6",
-        "es2015",
-        "es2017"
-      ]
-    },
-    "exclude": [
-      "node_modules"
-    ],
-    "compileOnSave": false
-  }
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "sourceMap": true,
+    "watch":true,
+    // "allowJs": true,
+    "declaration": true,
+    "lib": [
+      "es5",
+      "es6",
+      "es2015",
+      "es2017", 
+      "dom"
+    ]
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "compileOnSave": false
+}
