--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecs-sortsystem",
-  "version": "1.0.1",
+  "version": "1.0.0-alpha",
   "description": "simple ecs system for sorting components",
   "main": "./dist/index.js",
   "types": "./dist/src/entry.d.ts",
@@ -34,14 +34,14 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-typescript": "^3.0.5",
+    "karma-typescript": "^3.0.8",
     "mkdirp": "^0.5.1",
     "mocha": "^3.5.0",
-    "ts-loader": "^2.3.7",
-    "typescript": "^2.6.2",
+    "ts-loader": "^3.5.0",
+    "typescript": "^2.9.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "ecs-framework": "^0.4.7"
+    "ecs-framework": "^9.5.7-pre-alpha"
   }
 }
