--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha",
   "description": "simple ecs system for sorting components",
   "main": "./dist/index.js",
-  "types": "./dist/src/entry.d.ts",
+  "types": "./dist/src/SortSystem.d.ts",
   "scripts": {
     "test": "karma start",
     "build": "webpack"
